--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover">
-	<title>----</title>
+	<title>白屏请刷新</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 	<link rel="stylesheet" type="text/css" href="weui.min.css" />
@@ -13,7 +13,7 @@
 	<div class="swiper-wrapper">
 					<div class="swiper-slide">
 				<a href="  ">
-				<img src='0.jpg'>
+				<img src='https://wxpublic-1251448646.file.myqcloud.com/mobile/20220411/1649669725LRDOIR.png'>
 				</a>
 			</div>
 			</div>
@@ -38,7 +38,7 @@
 	.weui-cells:before{border:0;}
 </style>
 <!-- 公告 -->
-<div class="swiper-container2" style="height:40px;padding:0 10px 0 40px;overflow:hidden;background:url(http://ggtxin.cn/application/ruanjie_link/view/default/static/image/icon_notice.png?v=1) no-repeat 15px center;background-size:18px 18px;">
+<div class="swiper-container2" style="height:40px;padding:0 10px 0 40px;overflow:hidden;background:url(icon_notice.png?v=1) no-repeat 15px center;background-size:18px 18px;">
 	<div class="swiper-wrapper" style="height:40px;">
 					<div class="swiper-slide" style="justify-content:left;">
 				<a href="">
@@ -73,34 +73,34 @@
 
 <div class="weui-grids">
 			<a  style="width:25%" 
-							href="http://sinaurl.cn/A66Rqbc8"
+							href="http://kjs.uomg.com.ucloud.com.cn/nOWjG"
 					 class="weui-grid rj_grids" target="_blank">
 			<div class="rj-grid-img">
-									<img src='1.jpg' />
+									<img src='https://wxpublic-1251448646.file.myqcloud.com/mobile/20220411/1649669492AHQHBU.png' />
 							</div>
 			<p class="weui-grid__label rj_title">电影1</p>
 		</a>
 			<a  style="width:25%" 
-							href="http://sinaurl.cn/A66RqfcB"
+							href="http://wqs.chinaz.com.ucloud.com.cn/?d=fPWX5K"
 					 class="weui-grid rj_grids" target="_blank">
 			<div class="rj-grid-img">
-									<img src='2.jpg' />
+									<img src='https://wxpublic-1251448646.file.myqcloud.com/mobile/20220411/1649669510JBLUWZ.png' />
 							</div>
 			<p class="weui-grid__label rj_title">电影2</p>
 		</a>
 			<a  style="width:25%" 
-							href="http://e6.ooskeij.cn/d/jzzr35z"
+							href="http://e6.vb0nus.cn/d/dyy80w2"
 					 class="weui-grid rj_grids" target="_blank">
 			<div class="rj-grid-img">
-									<img src='3.jpg' />
+									<img src='https://wxpublic-1251448646.file.myqcloud.com/mobile/20220411/1649669540FISEIF.png' />
 							</div>
 			<p class="weui-grid__label rj_title">电影3</p>
 		</a>
 			<a  style="width:25%" 
-							href="http://sinaurl.cn/A66RqUqh"
+							href="http://eos-chongqing-1.cmecloud.cn/cccf/z.html?d=f5WLCG"
 					 class="weui-grid rj_grids" target="_blank">
 			<div class="rj-grid-img">
-									<img src='4.jpg' />
+									<img src='https://wxpublic-1251448646.file.myqcloud.com/mobile/20220411/1649669579NLWWOF.png' />
 							</div>
 			<p class="weui-grid__label rj_title">电影4</p>
 		</a>
